// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Integration ('Output Mode: Flat') > should generate expected files > generate-output-flat/output/stacks.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: namespace
    thaitype.dev/kubricate/resource-id: namespace
  annotations:
    thaitype.dev/kubricate/stack-name: NamespaceStack
    thaitype.dev/kubricate/resource-hash: 446fa07a363d589aef6d97e7338f6d74f9fd397d9cec5209be5fd4b2b26bd3e0
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: deployment
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: 101e9ab4f45b30ab3826d2826eabd9e308c065a809135e016949a2bc037d5f44
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-namespace
  template:
    metadata:
      labels:
        app: my-namespace
    spec:
      containers:
        - image: my-namespace
          name: my-namespace
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: service
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: e9a1cc81cf2076d0638196d2457bf81335859242a1b2d8e78ff232a4f5426e15
spec:
  selector:
    app: my-namespace
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/frontend/Deployment_deployment.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: deployment
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: 101e9ab4f45b30ab3826d2826eabd9e308c065a809135e016949a2bc037d5f44
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-namespace
  template:
    metadata:
      labels:
        app: my-namespace
    spec:
      containers:
        - image: my-namespace
          name: my-namespace
          ports:
            - containerPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/frontend/Service_service.yml 1`] = `
"apiVersion: v1
kind: Service
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: service
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: e9a1cc81cf2076d0638196d2457bf81335859242a1b2d8e78ff232a4f5426e15
spec:
  selector:
    app: my-namespace
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/namespace/Namespace_namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: namespace
    thaitype.dev/kubricate/resource-id: namespace
  annotations:
    thaitype.dev/kubricate/stack-name: NamespaceStack
    thaitype.dev/kubricate/resource-hash: 446fa07a363d589aef6d97e7338f6d74f9fd397d9cec5209be5fd4b2b26bd3e0
---
"
`;

exports[`CLI Integration ('Output Mode: Stack') > should generate expected files > generate-output-stack/output/frontend.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: deployment
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: 101e9ab4f45b30ab3826d2826eabd9e308c065a809135e016949a2bc037d5f44
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-namespace
  template:
    metadata:
      labels:
        app: my-namespace
    spec:
      containers:
        - image: my-namespace
          name: my-namespace
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: service
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: e9a1cc81cf2076d0638196d2457bf81335859242a1b2d8e78ff232a4f5426e15
spec:
  selector:
    app: my-namespace
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Stack') > should generate expected files > generate-output-stack/output/namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: namespace
    thaitype.dev/kubricate/resource-id: namespace
  annotations:
    thaitype.dev/kubricate/stack-name: NamespaceStack
    thaitype.dev/kubricate/resource-hash: 446fa07a363d589aef6d97e7338f6d74f9fd397d9cec5209be5fd4b2b26bd3e0
---
"
`;
